test/interactive010/expected
Prelude.List.(++) : List a -> List a -> List a
Prelude.Strings.(++) : String -> String -> String
Prelude.Classes./ : (__pi_arg : Float) →
                    (__pi_arg1 : Float) → Float
Usage is :doc <functionname>
Usage is :wc <functionname>
Usage is :printdef <functionname>
prim__divFloat
Prelude.Classes./

 : Float -> Float -> Float
(input):1:1: error: expected: ":",
    dependent type signature,
    end of input
/<EOF> 
^      
(input):1:1: error: expected: ":",
    dependent type signature,
    end of input
++<EOF> 
^       
prim__divFloat
